--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Dummy-circle</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Homepage</title>
 </head>
 <body>
     <div class="container">
-        <div class="circle big"></div>
-        <div class="circle bigger"></div>
-        <div class="circle biggest"></div>
+        <div class="circle big" style="background-image: url('image1.jpg');"></div>
+        <div class="circle bigger" style="background-image: url('image2.jpg');"></div>
+        <div class="circle biggest" style="background-image: url('image3.jpg');"></div>
     </div>
 </body>
 </html>
